--- a/computing-analogies.html
+++ b/computing-analogies.html
@@ -23,7 +23,7 @@
 <br>
 <br>
 <br>
-<p>Note: The following notes are not very refined. I wrote a few months ago I think they can be very helpful. We can refine them over time.</p>
+<p>Note: The following notes are not very refined. I wrote most of these notes several months ago and I think they can be very helpful. We can refine these ideas over time.</p>
 <br>
 <br>
 <br>
@@ -34,21 +34,24 @@
 <br>
 <p>Folders serve a huge function in computers. </p>
 <br>
-<p>The metaphor with the computer and files and folders is very interesting and I think very helpful on a larger scale for understanding how important, helpful, and valuable ETFs can be. </p>
+<p>The metaphor with the computer and files and folders is interesting. I think this metaphor can be very helpful for communicating and understanding the importance, helpfulness, and value of ETFs. </p>
 <br>
 <p>Explaining ETFs like folders on a computer is super relatable and understandable. Almost everybody understands how important that is because almost everybody uses folders on their computer. </p>
 <br>
+<br>
+<p> Blockchains are community computers. Community computers need folder functionality. Community computers need primitives to group together tokens. </p>
+<br>
 <p>This computer analogy is worth considering more and can be super resonant, powerful, and helpful.</p>
+<br>          
+  <br>          
+<p><img src='CETF%20computing%20analogies/0D1EB257-4BCB-456E-B4D4-B0EA74F21537.png'></p>
 <br>
 <br>
-<p><img src='computing-analogies/0D1EB257-4BCB-456E-B4D4-B0EA74F21537.png'></p>
+<br>
+<p><img src='CETF%20computing%20analogies/FD00B1DE-640C-4301-85D5-D248E8329954.png'></p>
 <br>
 <br>
-<br>
-<p><img src='computing-analogies/FD00B1DE-640C-4301-85D5-D248E8329954.png'></p>
-<br>
-<br>
-<p><img src='computing-analogies/88ABE04C-84C1-47C5-AF8B-07A9B908365C.png'></p>
+<p><img src='CETF%20computing%20analogies/88ABE04C-84C1-47C5-AF8B-07A9B908365C.png'></p>
 <br>
 <br>
 <br>
@@ -60,11 +63,11 @@
 <br>
 <h2 id="Tokens, NFTs, and Folders">Tokens, NFTs, and Folders</h2>
 <br>
-<p>Sometimes I’ve thought about NFTs and CETFs as computer analogies. NFTs (and tokens in general) are a new file type that can’t be copied (except by whoever owns the root access).</p>
+<p>Sometimes I’ve thought about NFTs and CETFs in terms of computer analogies. NFTs (and tokens in general) are a new file type that can’t be copied (except by whoever owns the root access of the token).</p>
 <br>
 <p>CETFs can offer many tools to manipulate work with NFTs and tokens. </p>
 <br>
-<p>For one example, CETFs provide folder functionality, similar to how a folder in file explorer and Mac finder enable you to put all files in one folder. This is a primitive tool for many other higher level interactions activities and applications. </p>
+<p>For one example, CETFs provide folder functionality, similar to how a folder in file explorer and Mac finder enable you to put all files in one folder. This is helpful in itself and also a primitive tool for many other higher level interactions activities and applications. Folders of tokens, or funds, can unlock many adjacent possibilities and creative compositions on community computers. More about adjacent possibilities here: https://t.me/EdenOSinfo/15815</p>
 <br>
 <br>
 <br>
@@ -124,7 +127,7 @@
 <br>
 <p><a href="https://twitter.com/balajis/status/1466651023276056576?s=12">https://twitter.com/balajis/status/1466651023276056576?s=12</a></p>
 <br>
-<p><img src='computing-analogies/2CD415B5-4963-4519-A014-B57D34F06E6B.png'></p>
+<p><img src='CETF%20computing%20analogies/2CD415B5-4963-4519-A014-B57D34F06E6B.png'></p>
 <br>
 <br>
 <br>
@@ -141,12 +144,12 @@
 <br>
 <br>
 <br>
-<p><img src='computing-analogies/77822097-1143-4CEF-B70F-529EB1AE7D30.png'></p>
+<p><img src='CETF%20computing%20analogies/77822097-1143-4CEF-B70F-529EB1AE7D30.png'></p>
 <br>
 <br>
-<p><img src='computing-analogies/9A5F6D2C-6E60-402A-8039-0281597C6A03.png'></p>
+<p><img src='CETF%20computing%20analogies/9A5F6D2C-6E60-402A-8039-0281597C6A03.png'></p>
 <br>
-<p><img src='computing-analogies/68EF698B-BF58-4AFA-8D06-23245CEECEB3.png'></p>
+<p><img src='CETF%20computing%20analogies/68EF698B-BF58-4AFA-8D06-23245CEECEB3.png'></p>
 <br>
 <br>
 <br>
